# wufus-craft-launcher

./: AGENTS.md  Taskfile.yml  commit.ps1
docs/: code-standards.md
launcher/: eslint.config.js  package.json  pnpm-lock.yaml  (+1 more)
launcher/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
launcher/src-tauri/src/: lib.rs
launcher/src-tauri/src/application/: commands.rs  error.rs  launch_commands.rs  mod.rs  news_commands.rs  server_commands.rs  updater_commands.rs
launcher/src-tauri/src/core/: launcher.rs  manifest.rs  mod.rs  settings.rs  state.rs  updater.rs
launcher/src-tauri/src/core/file_policy/: decision.rs  file_category.rs  mod.rs  policy.rs  protection_rule.rs
launcher/src-tauri/src/core/java/: java_checker.rs  java_finder.rs  java_info.rs  mod.rs
launcher/src-tauri/src/core/manifest/: build_manifest.rs  file_entry.rs  mod.rs  rules.rs  validation.rs  version_info.rs
launcher/src-tauri/src/core/news/: mod.rs
launcher/src-tauri/src/core/server_status/: mod.rs
launcher/src-tauri/src/core/state/: installed_file.rs  local_state.rs  mod.rs  update_status.rs  validation.rs
launcher/src-tauri/src/core/updater/: manifest_comparator.rs  mod.rs  repair_report.rs  update_checker.rs  update_plan.rs  update_service.rs
launcher/src-tauri/src/event_system/: events.rs  mod.rs  updater_events.rs
launcher/src-tauri/src/infrastructure/: cache.rs  fs.rs  logger.rs  mod.rs  network.rs  processes.rs
launcher/src-tauri/src/infrastructure/cache/: cache_paths.rs  manifest_cache.rs  mod.rs
launcher/src-tauri/src/infrastructure/fs/: file_scanner.rs  fs_manager.rs  hasher.rs  mod.rs  path_resolver.rs  safe_delete.rs
launcher/src-tauri/src/infrastructure/local_state/: local_state_store.rs  mod.rs  state_paths.rs
launcher/src-tauri/src/infrastructure/network/: cancel_token.rs  download_error.rs  download_queue.rs  file_downloader.rs  http_client.rs  mod.rs
(+25 files in other folders)
