[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
dead_code = "warn"
unused_variables = "warn"

[lints.clippy]
# priority = -1 чтобы отдельные правила ниже могли переопределить группы
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Разрешено: повторение имени модуля в типах — нормальная практика в Rust
module_name_repetitions = "allow"
# Разрешено: #[must_use] везде — слишком шумно
must_use_candidate = "allow"
# Разрешено: doc-errors/panics не обязательны в приватном коде
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Разрешено: множество аргументов через Builder бывает оправдано
too_many_arguments = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.45"
open = "5.3.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
thiserror = "2.0.18"
dirs = "6.0.0"
walkdir = "2.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

